--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "npx nodemon ./server/server.js"
+    "server": "npx nodemon ./server/server.js",
+    "client": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,14 @@
   "dependencies": {
     "axios": "^0.22.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
