--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "webpack": "^5.23.0",
