--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local-mongoose": "^6.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.3.0",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
   }
