--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.12.13",
     "axios": "^0.22.0",
     "babel-loader": "^8.2.2",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "mongoose": "^6.0.10",
