--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "axios": "^0.22.0",
     "babel-loader": "^8.2.2",
     "connect-ensure-login": "^0.1.1",
+    "css-loader": "^6.4.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
     "passport": "^0.5.0",
@@ -36,6 +38,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.3.0",
+    "style-loader": "^3.3.0",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0"
   }
